[tool.poetry]
name = "stimkysticker"
version = "0.1.0"
description = "Telegram bot to automatically print STIMKY stickers!"
authors = ["Kay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
telethon = "^1.29.3"
pillow = "^10.0.0"
brother-ql = "^0.9.4"
attrs = "^23.1.0"
pyyaml = "^6.0.1"
loguru = "^0.7.0"
click = "^8.1.7"
pyserial-asyncio = "^0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
